--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
 
 <head>
-  <meta charset="UTF-8">
   <title>Activity Tracker</title>
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="styles.css">
+<!--   <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="styles.css"> -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600,800,900" rel="stylesheet" type="text/css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/0.7.0/dist/progressbar.js"></script>
+
 </head>
 
 <body>
   <section class="welcome-section">
-    <h1 class="logo"><img src="../images/logo.png" alt="FitLit logo"></h1>
+    <h1 class="logo"><img src="./images/logo.png" alt="FitLit logo"></h1>
     <h2 class="date"></h2>
     <h2 class="welcome-message">Welcome <span class="username"></span></h2>
   </section>
@@ -21,7 +22,7 @@
     <section class="data-section hydration grid-item draggable" tabindex="1">
       <h4 class="data-heading">Hydration</h4>
       <article class="data-article water-consumed-article">
-        <img class="img-medium" src="../images/drop.svg" alt="water droplet">
+        <img class="img-medium" src="./images/drop.svg" alt="water droplet">
         <p class="subtext">TODAY</p>
         <p class="water-consumed"></p>
       </article>
@@ -33,7 +34,7 @@
     <section class="data-section sleep grid-item draggable" tabindex="2">
       <h4 class="data-heading">Sleep</h4>
       <article class="data-article hours-slept-day-article">
-        <img class="img-medium" src="../images/moon.svg" alt="moon with stars">
+        <img class="img-medium" src="./images/moon.svg" alt="moon with stars">
         <p class="subtext">LAST NIGHT</p>
         <p class="data-text hours-slept-day"></p>
         <p class="data-text quality-sleep-day"></p>
@@ -43,7 +44,7 @@
           alt="A line chart that displays the number of hours slept each day of the week and the quality of sleep each night."></canvas>
       </article>
       <article class="data-article longest-sleepers-article">
-        <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
+        <img class="img-medium" src="./images/trophy.svg" alt="trophy for a winner">
         <p class="subtext">USER WITH MOST SLEEP THIS WEEK</p>
         <p class="data-text longest-sleepers"></p>
       </article>
@@ -56,7 +57,7 @@
         <p class="number-of-steps-day"></p>
       </article>
       <article class="data-article number-of-minutes-active-day-article">
-        <img class="img-medium" src="../images/stopwatch.svg" alt="road">
+        <img class="img-medium" src="./images/stopwatch.svg" alt="road">
         <p class="subtext">TODAY</p>
         <div class="separator">
           <div class="user">
@@ -73,7 +74,7 @@
         </div>
       </article>
       <article class="data-article distance-comparison">
-        <img class="img-medium" src="../images/footsteps-silhouette-variant.svg" alt="road">
+        <img class="img-medium" src="./images/footsteps-silhouette-variant.svg" alt="road">
         <p class="subtext">TODAY</p>
         <div class="separator">
           <div class="user">
@@ -92,7 +93,7 @@
         </div>
       </article>
       <article class="data-article stairs-comparison">
-        <img class="img-medium" src="../images/goal.svg" alt="road">
+        <img class="img-medium" src="./images/goal.svg" alt="road">
         <p class="subtext">TODAY</p>
         <div class="separator">
           <div class="user">
@@ -109,19 +110,19 @@
         </div>
       </article>
       <article class="data-article distance-in-miles-article">
-        <img class="img-medium" src="../images/road.svg" alt="road">
+        <img class="img-medium" src="./images/road.svg" alt="road">
         <p class="subtext">TODAY</p>
         <p class="data-text distance-in-miles"></p>
       </article>
       <article class="data-article week-review-article">
-          <img class="img-medium" src="../images/appointment.svg" alt="Calendar to signify a week of exercise completed.">
+          <img class="img-medium" src="./images/appointment.svg" alt="Calendar to signify a week of exercise completed.">
           <p class="subtext">YOUR WEEK IN REVIEW</p>
           <p class="data-text week-review-minutes"></p>
           <p class="data-text week-review-steps"></p>
           <p class="data-text week-review-stairs"></p>
         </article>
       <article class="data-article most-active-article">
-        <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
+        <img class="img-medium" src="./images/trophy.svg" alt="trophy for a winner">
         <p class="subtext">USER MOST ACTIVE THIS WEEK</p>
         <p class="data-text most-active"></p>
       </article>
@@ -142,23 +143,9 @@
       </article>
     </section>
   </div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/0.7.0/dist/progressbar.js"></script>
-<script src="https://unpkg.com/packery@2/dist/packery.pkgd.js"></script>
-<script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
-<script type="text/javascript" src="../data/activity.js"></script>
-<script type="text/javascript" src="../data/sleep.js"></script>
-<script type="text/javascript" src="../data/users.js"></script>
-<script type="text/javascript" src="../data/hydration.js"></script>
-<script type="text/javascript" src="./User.js"></script>
-<script type="text/javascript" src="./UserRepo.js"></script>
-<script type="text/javascript" src="./Hydration.js"></script>
-<script type="text/javascript" src="./Sleep.js"></script>
-<script type="text/javascript" src="./SleepRepo.js"></script>
-<script type="text/javascript" src="./Activity.js"></script>
-<script type="text/javascript" src="./ActivityRepo.js"></script>
-<script type="text/javascript" src="./scripts.js"></script>
 
+  
+  <script src="https://unpkg.com/packery@2.1/dist/packery.pkgd.min.js"></script>
+  <script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
+</body>
 </html>
