--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>Activity Tracker</title>
-<!--   <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="styles.css"> -->
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600,800,900" rel="stylesheet" type="text/css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
@@ -19,132 +19,137 @@
     <h2 class="welcome-message">Welcome <span class="username"></span></h2>
   </section>
   <div class="grid">
-    <section class="data-section hydration grid-item draggable" tabindex="1">
-      <h4 class="data-heading">Hydration</h4>
-      <article class="data-article water-consumed-article">
-        <img class="img-medium" src="./images/drop.svg" alt="water droplet">
-        <p class="subtext">TODAY</p>
-        <p class="water-consumed"></p>
-      </article>
-      <article class="data-article water-consumed-week">
-        <canvas id="water-consumed-week"
-          alt="A bar chart that displays the number of ounces of water the user consumed daily, over the course of a week."></canvas>
-      </article>
-    </section>
-    <section class="data-section sleep grid-item draggable" tabindex="2">
-      <h4 class="data-heading">Sleep</h4>
-      <article class="data-article hours-slept-day-article">
-        <img class="img-medium" src="./images/moon.svg" alt="moon with stars">
-        <p class="subtext">LAST NIGHT</p>
-        <p class="data-text hours-slept-day"></p>
-        <p class="data-text quality-sleep-day"></p>
-      </article>
-      <article class="data-article sleep-week">
-        <canvas id="sleep-week"
-          alt="A line chart that displays the number of hours slept each day of the week and the quality of sleep each night."></canvas>
-      </article>
-      <article class="data-article longest-sleepers-article">
-        <img class="img-medium" src="./images/trophy.svg" alt="trophy for a winner">
-        <p class="subtext">USER WITH MOST SLEEP THIS WEEK</p>
-        <p class="data-text longest-sleepers"></p>
-      </article>
-    </section>
-    <section class="data-section activity grid-item draggable" tabindex="3">
-      <h4 class="data-heading">Activity</h4>
-      <article class="data-article user-step-goal"></article>
-      <article class="data-article average-step-goal"></article>
-      <article class="data-article number-of-steps-day-article">
-        <p class="number-of-steps-day"></p>
-      </article>
-      <article class="data-article number-of-minutes-active-day-article">
-        <img class="img-medium" src="./images/stopwatch.svg" alt="road">
-        <p class="subtext">TODAY</p>
-        <div class="separator">
-          <div class="user">
-            <h5>User</h5>
-            <h4 class="data-text number-of-minutes-active-day"></h4>
-            <p>Minutes Active</p>
-          </div>
-          <div class="border"></div>
-          <div class="average">
-            <h5>Average</h5>
-            <h4 class="data-text average-minutes-active"></h4>
-            <p>Minutes Active</p>
-          </div>
-        </div>
-      </article>
-      <article class="data-article distance-comparison">
-        <img class="img-medium" src="./images/footsteps-silhouette-variant.svg" alt="road">
-        <p class="subtext">TODAY</p>
-        <div class="separator">
-          <div class="user">
-            <h5>User</h5>
-            <h4 class="data-text distance"></h4>
-            <p>Steps Taken</p>
-            <p class="subtext number-of-steps-goal"></p>
-          </div>
-          <div class="border"></div>
-          <div class="average">
-            <h5>Average</h5>
-            <h4 class="data-text average-distance"></h4>
-            <p>Steps Taken</p>
-            <p class="subtext avg-number-of-steps-goal"></p>
-          </div>
-        </div>
-      </article>
-      <article class="data-article stairs-comparison">
-        <img class="img-medium" src="./images/goal.svg" alt="road">
-        <p class="subtext">TODAY</p>
-        <div class="separator">
-          <div class="user">
-            <h5>User</h5>
-            <h4 class="data-text stairs"></h4>
-            <p>Stairs Climbed</p>
-          </div>
-          <div class="border"></div>
-          <div class="average">
-            <h5>Average</h5>
-            <h4 class="data-text average-stairs"></h4>
-            <p>Stairs Climbed</p>
-          </div>
-        </div>
-      </article>
-      <article class="data-article distance-in-miles-article">
-        <img class="img-medium" src="./images/road.svg" alt="road">
-        <p class="subtext">TODAY</p>
-        <p class="data-text distance-in-miles"></p>
-      </article>
-      <article class="data-article week-review-article">
-          <img class="img-medium" src="./images/appointment.svg" alt="Calendar to signify a week of exercise completed.">
-          <p class="subtext">YOUR WEEK IN REVIEW</p>
-          <p class="data-text week-review-minutes"></p>
-          <p class="data-text week-review-steps"></p>
-          <p class="data-text week-review-stairs"></p>
+    <div class="grid-column1">
+      <section class="data-section hydration grid-item draggable" tabindex="1">
+        <h4 class="data-heading">Hydration</h4>
+        <article class="data-article water-consumed-article">
+          <img class="img-medium" src="../images/drop.svg" alt="water droplet">
+          <p class="subtext">TODAY</p>
+          <p class="water-consumed"></p>
         </article>
-      <article class="data-article most-active-article">
-        <img class="img-medium" src="./images/trophy.svg" alt="trophy for a winner">
-        <p class="subtext">USER MOST ACTIVE THIS WEEK</p>
-        <p class="data-text most-active"></p>
-      </article>
-    </section>
-    <section class="data-section friends grid-item draggable" tabindex="4">
-      <h4 class="data-heading">Friends</h4>
-      <article class="friends-step"></article>
-    </section>
-    <section class="data-section challenges grid-item draggable" tabindex="5">
-      <h4 class="data-heading">Challenges</h4>
-      <article class="increasing-steps-article">
-        <h4>3 Day Step Streak</h4>
-        <p class="increasing-steps"></p>
-      </article>
-      <article class="increasing-stairs-article">
-        <h4>2 Day Stair Streak</h4>
-        <p class="increasing-stairs"></p>
-      </article>
-    </section>
+        <article class="data-article water-consumed-week">
+          <canvas id="water-consumed-week"
+            alt="A bar chart that displays the number of ounces of water the user consumed daily, over the course of a week."></canvas>
+        </article>
+      </section>
+      <section class="data-section challenges grid-item draggable" tabindex="5">
+        <h4 class="data-heading">Challenges</h4>
+        <article class="increasing-steps-article">
+          <h4>3 Day Step Streak</h4>
+          <p class="increasing-steps"></p>
+        </article>
+        <article class="increasing-stairs-article">
+          <h4>2 Day Stair Streak</h4>
+          <p class="increasing-stairs"></p>
+        </article>
+      </section>
+      <section class="data-section friends grid-item draggable" tabindex="4">
+        <h4 class="data-heading">Friends</h4>
+        <article class="friends-step"></article>
+      </section>
+    </div>
+    <div class="grid-column2">
+      <section class="data-section sleep grid-item draggable" tabindex="2">
+        <h4 class="data-heading">Sleep</h4>
+        <article class="data-article hours-slept-day-article">
+          <img class="img-medium" src="../images/moon.svg" alt="moon with stars">
+          <p class="subtext">LAST NIGHT</p>
+          <p class="data-text hours-slept-day"></p>
+          <p class="data-text quality-sleep-day"></p>
+        </article>
+        <article class="data-article sleep-week">
+          <canvas id="sleep-week"
+            alt="A line chart that displays the number of hours slept each day of the week and the quality of sleep each night."></canvas>
+        </article>
+        <article class="data-article longest-sleepers-article">
+          <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
+          <p class="subtext">USER WITH MOST SLEEP THIS WEEK</p>
+          <p class="data-text longest-sleepers"></p>
+        </article>
+      </section>
+    </div>
+    <div class="grid-column3">
+      <section class="data-section activity grid-item draggable" tabindex="3">
+        <h4 class="data-heading">Activity</h4>
+        <article class="data-article user-step-goal"></article>
+        <article class="data-article average-step-goal"></article>
+        <article class="data-article number-of-steps-day-article">
+          <p class="number-of-steps-day"></p>
+        </article>
+        <article class="data-article number-of-minutes-active-day-article">
+          <img class="img-medium" src="../images/stopwatch.svg" alt="road">
+          <p class="subtext">TODAY</p>
+          <div class="separator">
+            <div class="user">
+              <h5>User</h5>
+              <h4 class="data-text number-of-minutes-active-day"></h4>
+              <p>Minutes Active</p>
+            </div>
+            <div class="border"></div>
+            <div class="average">
+              <h5>Average</h5>
+              <h4 class="data-text average-minutes-active"></h4>
+              <p>Minutes Active</p>
+            </div>
+          </div>
+        </article>
+        <article class="data-article distance-comparison">
+          <img class="img-medium" src="../images/footsteps-silhouette-variant.svg" alt="road">
+          <p class="subtext">TODAY</p>
+          <div class="separator">
+            <div class="user">
+              <h5>User</h5>
+              <h4 class="data-text distance"></h4>
+              <p>Steps Taken</p>
+              <p class="subtext number-of-steps-goal"></p>
+            </div>
+            <div class="border"></div>
+            <div class="average">
+              <h5>Average</h5>
+              <h4 class="data-text average-distance"></h4>
+              <p>Steps Taken</p>
+              <p class="subtext avg-number-of-steps-goal"></p>
+            </div>
+          </div>
+        </article>
+        <article class="data-article stairs-comparison">
+          <img class="img-medium" src="../images/goal.svg" alt="road">
+          <p class="subtext">TODAY</p>
+          <div class="separator">
+            <div class="user">
+              <h5>User</h5>
+              <h4 class="data-text stairs"></h4>
+              <p>Stairs Climbed</p>
+            </div>
+            <div class="border"></div>
+            <div class="average">
+              <h5>Average</h5>
+              <h4 class="data-text average-stairs"></h4>
+              <p>Stairs Climbed</p>
+            </div>
+          </div>
+        </article>
+        <article class="data-article distance-in-miles-article">
+          <img class="img-medium" src="../images/road.svg" alt="road">
+          <p class="subtext">TODAY</p>
+          <p class="data-text distance-in-miles"></p>
+        </article>
+        <article class="data-article week-review-article">
+            <img class="img-medium" src="../images/appointment.svg" alt="Calendar to signify a week of exercise completed.">
+            <p class="subtext">YOUR WEEK IN REVIEW</p>
+            <p class="data-text week-review-minutes"></p>
+            <p class="data-text week-review-steps"></p>
+            <p class="data-text week-review-stairs"></p>
+          </article>
+        <article class="data-article most-active-article">
+          <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
+          <p class="subtext">USER MOST ACTIVE THIS WEEK</p>
+          <p class="data-text most-active"></p>
+        </article>
+      </section>
+    </div>
   </div>
 
-  
   <script src="https://unpkg.com/packery@2.1/dist/packery.pkgd.min.js"></script>
   <script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
 </body>
