--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
   <section class="welcome-section">
     <img src="./images/logo.png" alt="FitLit logo">
-    <h1 class="date"></h1>
+    <h2 class="date"></h2>
     <h1 class="welcome-message">Welcome <span class="username"></span></h1>
   </section>
   <div class="grid">
@@ -19,7 +19,7 @@
         <h2 class="data-heading">Hydration</h2>
         <article class="data-article water-consumed-article">
           <img class="img-medium" src="../images/drop.svg" alt="water droplet">
-          <p class="subtext">TODAY</p>
+          <h3 class="subtext">TODAY</h3>
           <p class="data-text water-consumed"></p>
         </article>
         <article class="data-article water-consumed-week">
@@ -30,11 +30,11 @@
       <section class="data-section challenges grid-item draggable" tabindex="5">
         <h2 class="data-heading">Challenges</h2>
         <article class="increasing-steps-article">
-          <h2>3 Day Step Streak</h2>
+          <h3 class="streak-heading">3 Day Step Streak</h3>
           <p class="increasing-steps"></p>
         </article>
         <article class="increasing-stairs-article">
-          <h2>2 Day Stair Streak</h2>
+          <h3 class="streak-heading">2 Day Stair Streak</h3>
           <p class="increasing-stairs"></p>
         </article>
       </section>
@@ -48,7 +48,7 @@
         <h2 class="data-heading">Sleep</h2>
         <article class="data-article hours-slept-day-article">
           <img class="img-medium" src="../images/moon.svg" alt="moon with stars">
-          <p class="subtext">LAST NIGHT</p>
+          <h3 class="subtext">LAST NIGHT</h3>
           <p class="data-text hours-slept-day"></p>
           <p class="data-text quality-sleep-day"></p>
         </article>
@@ -58,7 +58,7 @@
         </article>
         <article class="data-article longest-sleepers-article">
           <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
-          <p class="subtext">USER WITH MOST SLEEP THIS WEEK</p>
+          <h3 class="subtext">USER WITH MOST SLEEP THIS WEEK</h3>
           <p class="data-text longest-sleepers"></p>
         </article>
       </section>
@@ -73,72 +73,72 @@
         </article>
         <article class="data-article number-of-minutes-active-day-article">
           <img class="img-medium" src="../images/stopwatch.svg" alt="road">
-          <p class="subtext">TODAY</p>
+          <h3 class="subtext">TODAY</h3>
           <div class="separator">
             <div class="user">
-              <h3>User</h3>
-              <h2 class="data-text number-of-minutes-active-day"></h2>
+              <h4 class="user-average">User</h4>
+              <p class="data-text number-of-minutes-active-day"></p>
               <p>Minutes Active</p>
             </div>
             <div class="border"></div>
             <div class="average">
-              <h3>Average</h3>
-              <h2 class="data-text average-minutes-active"></h2>
+              <h4 class="user-average">Average</h4>
+              <p class="data-text average-minutes-active"></p>
               <p>Minutes Active</p>
             </div>
           </div>
         </article>
         <article class="data-article distance-comparison">
           <img class="img-medium" src="../images/footsteps-silhouette-variant.svg" alt="road">
-          <p class="subtext">TODAY</p>
+          <h3 class="subtext">TODAY</h3>
           <div class="separator">
             <div class="user">
-              <h3>User</h3>
-              <h2 class="data-text distance"></h2>
+              <h4 class="user-average">User</h4>
+              <p class="data-text distance"></p>
               <p>Steps Taken</p>
-              <p class="subtext number-of-steps-goal"></p>
+              <h3 class="subtext number-of-steps-goal"></h3>
             </div>
             <div class="border"></div>
             <div class="average">
-              <h3>Average</h3>
-              <h2 class="data-text average-distance"></h2>
+              <h4 class="user-average">Average</h4>
+              <p class="data-text average-distance"></p>
               <p>Steps Taken</p>
-              <p class="subtext avg-number-of-steps-goal"></p>
+              <h3 class="subtext avg-number-of-steps-goal"></h3>
             </div>
           </div>
         </article>
         <article class="data-article stairs-comparison">
           <img class="img-medium" src="../images/goal.svg" alt="road">
-          <p class="subtext">TODAY</p>
+          <h3 class="subtext">TODAY</h3>
           <div class="separator">
             <div class="user">
-              <h3>User</h3>
-              <h2 class="data-text stairs"></h2>
+              <h4 class="user-average">User</h4>
+              <p class="data-text stairs"></p>
               <p>Stairs Climbed</p>
             </div>
             <div class="border"></div>
             <div class="average">
-              <h3>Average</h3>
-              <h2 class="data-text average-stairs"></h2>
+              <h4 class="user-average">Average</h4>
+              <p class="data-text average-stairs"></p>
               <p>Stairs Climbed</p>
             </div>
           </div>
         </article>
         <article class="data-article distance-in-miles-article">
           <img class="img-medium" src="../images/road.svg" alt="road">
-          <p class="subtext">TODAY</p>
+          <h3 class="subtext">TODAY</h3>
           <p class="data-text distance-in-miles"></p>
         </article>
         <article class="data-article week-review-article">
             <img class="img-medium" src="../images/appointment.svg" alt="Calendar to signify a week of exercise completed.">
-            <p class="subtext">YOUR WEEK IN REVIEW</p>
+            <h3 class="subtext">YOUR WEEK IN REVIEW</h3>
             <p class="data-text week-review-minutes"></p>
             <p class="data-text week-review-steps"></p>
             <p class="data-text week-review-stairs"></p>
           </article>
         <article class="data-article most-active-article">
           <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
-          <p class="subtext">USER MOST ACTIVE THIS WEEK</p>
+          <h3 class="subtext">USER MOST ACTIVE THIS WEEK</h3>
           <p class="data-text most-active"></p>
         </article>
       </section>
