Make minor styling changes to mobile MQ

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <img src="./images/logo.png" class="fitlit-logo" alt="FitLit logo">
       <div class="name-date-wrapper">
       <h2 class="date"></h2>
-    <h1 class="welcome-message">Welcome,  <span class="username"></span></h1>
+    <h1 class="welcome-message">Welcome<span class="username"></span></h1>
   </div>
   </section>
   <div class="grid">
