Add form scaffolding and post blueprint

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,31 @@
           <p class="data-text longest-sleepers"></p>
         </article>
       </section>
+      <section class="data-section post-section grid-item draggable" tabindex="2">
+        <h2 class="data-heading">Submit Stats</h2>
+        <article class="data-article post-article">
+          <h3 class="subtext">Input your stats</h3>
+          <form class="hydration-form" action="index.html" method="post">
+            <label for=""></label>
+            <input class="hydration-date" type="text" name="" value="" placeholder="date">
+            <input class="input-numOunces" type="text" name="" value="" placeholder="numOunces">
+            <button class="hydration-btn" type="submit"></button>
+          </form>
+          <form class="sleep-form" action="index.html" method="post">
+            <input class="sleep-date" type="text" name="" value="" placeholder="date">
+            <input class="input-hoursSlept" type="text" name="" value="" placeholder="hoursSlept">
+            <input class="input-sleepQuality" type="text" name="" value="" placeholder="sleepQuality">
+            <button class="sleep-btn" type="submit"></button>
+          </form>
+          <form class="activity-form" action="index.html" method="post">
+            <input type="text" name="" value="" placeholder="date">
+            <input type="text" name="" value="" placeholder="numSteps">
+            <input type="text" name="" value="" placeholder="minutesActive">
+            <input type="text" name="" value="" placeholder="flightsOfStairs">
+            <button class="activity-btn" type="submit"></button>
+          </form>
+        </article>
+      </section>
     </div>
     <div class="grid-column3">
       <section class="data-section activity grid-item draggable" tabindex="3">
