--- a/src/index.html
+++ b/src/index.html
@@ -68,26 +68,33 @@
       </section>
       <section class="data-section post-section grid-item draggable" tabindex="2">
         <h2 class="data-heading">Submit Stats</h2>
+        <div class="post__btn--container">
+          <button class="show__hydration--btn" type="button" name="button">Show Hydration</button>
+          <button class="show__activity--btn" type="button" name="button">Show Activity</button>
+          <button class="show__sleep--btn" type="button" name="button">Show Sleep</button>
+        </div>
         <article class="data-article post-article">
           <h3 class="subtext">Input your stats</h3>
-          <form class="hydration-form" action="index.html" method="post">
-            <label for=""></label>
-            <input class="hydration-date" type="text" name="" value="" placeholder="date">
-            <input class="input-numOunces" type="text" name="" value="" placeholder="numOunces">
-            <button class="hydration-btn" type="submit"></button>
-          </form>
           <form class="sleep-form" action="index.html" method="post">
-            <input class="sleep-date" type="text" name="" value="" placeholder="date">
-            <input class="input-hoursSlept" type="text" name="" value="" placeholder="hoursSlept">
-            <input class="input-sleepQuality" type="text" name="" value="" placeholder="sleepQuality">
-            <button class="sleep-btn" type="submit"></button>
+            <label for="">Hours Slept</label>
+            <input class="input-hoursSlept" type="number" name="" value="" placeholder="Enter Numerical Data" required>
+            <label for="">Sleep Quality</label>
+            <input class="input-sleepQuality" type="number" name="" value="" placeholder="Enter Numerical Data" required>
+            <button class="sleep__submit--btn" type="submit">Submit Data</button>
+          </form>
+          <form class="hydration-form" action="index.html" method="post">
+            <label for="">Ounces Drank</label>
+            <input class="input-numOunces" type="number" name="" value="" placeholder="Enter Numerical Data" required>
+            <button class="hydration__submit--btn" type="submit">Submit Data</button>
           </form>
           <form class="activity-form" action="index.html" method="post">
-            <input type="text" name="" value="" placeholder="date">
-            <input type="text" name="" value="" placeholder="numSteps">
-            <input type="text" name="" value="" placeholder="minutesActive">
-            <input type="text" name="" value="" placeholder="flightsOfStairs">
-            <button class="activity-btn" type="submit"></button>
+            <label for="">Number of Steps</label>
+            <input type="number" name="" value="" placeholder="Enter Numerical Data" required>
+            <label for="">Minutes Active</label>
+            <input type="number" name="" value="" placeholder="Enter Numerical Data" required>
+            <label for="">Flights of Stairs</label>
+            <input type="number" name="" value="" placeholder="Enter Numerical Data" required>
+            <button class="activity__submit--btn" type="submit">Submit Data</button>
           </form>
         </article>
       </section>
