--- a/src/index.html
+++ b/src/index.html
@@ -76,24 +76,36 @@
         <article class="data-article post-article">
           <h3 class="subtext">Input your stats</h3>
           <form class="sleep-form" action="index.html" method="post">
-            <label for="">Hours Slept</label>
-            <input class="input-hoursSlept" type="number" name="" value="" placeholder="Enter Numerical Data" required>
-            <label for="">Sleep Quality</label>
-            <input class="input-sleepQuality" type="number" name="" value="" placeholder="Enter Numerical Data" required>
+            <div class="input-container">
+              <label for="">Hours Slept</label>
+              <input class="input-hoursSlept" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+            </div>
+            <div class="input-container">
+              <label for="">Sleep Quality</label>
+              <input class="input-sleepQuality" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+            </div>
             <button class="sleep__submit--btn" type="submit">Submit Data</button>
           </form>
           <form class="hydration-form" action="index.html" method="post">
-            <label for="">Ounces Drank</label>
-            <input class="input-numOunces" type="number" name="" value="" placeholder="Enter Numerical Data" required>
+            <div class="input-container">
+              <label for="">Ounces Drank</label>
+              <input class="input-numOunces" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+            </div>
             <button class="hydration__submit--btn" type="submit">Submit Data</button>
           </form>
           <form class="activity-form" action="index.html" method="post">
-            <label for="">Number of Steps</label>
-            <input type="number" name="" value="" placeholder="Enter Numerical Data" required>
-            <label for="">Minutes Active</label>
-            <input type="number" name="" value="" placeholder="Enter Numerical Data" required>
-            <label for="">Flights of Stairs</label>
-            <input type="number" name="" value="" placeholder="Enter Numerical Data" required>
+            <div class="input-container">
+              <label for="">Number of Steps</label>
+              <input type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+            </div>
+            <div class="input-container">
+              <label for="">Minutes Active</label>
+              <input type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+            </div>
+            <div class="input-container">
+              <label for="">Flights of Stairs</label>
+              <input type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+            </div>
             <button class="activity__submit--btn" type="submit">Submit Data</button>
           </form>
         </article>
