Fix mis-used sleepers plural across three files

--- a/src/index.html
+++ b/src/index.html
@@ -60,10 +60,10 @@
           <canvas id="sleep-week"
             alt="A line chart that displays the number of hours slept each day of the week and the quality of sleep each night."></canvas>
         </article>
-        <article class="data-article longest-sleepers-article">
+        <article class="data-article longest-sleeper-article">
           <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
           <h3 class="subtext secondary-heading">USER WITH MOST SLEEP THIS WEEK</h3>
-          <p class="data-text longest-sleepers"></p>
+          <p class="data-text longest-sleeper"></p>
         </article>
       </section>
     </div>
