--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Activity Tracker</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
@@ -8,74 +7,73 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/0.7.0/dist/progressbar.js"></script>
 </head>
-
 <body>
-  <section class="welcome-section">
-      <img src="./images/logo.png" class="fitlit-logo" alt="FitLit logo">
-      <div class="name-date-wrapper">
-      <h2 class="date"></h2>
+  <header class="welcome-section">
+    <img src="./images/logo.png" class="fitlit-logo" alt="FitLit logo">
+    <div class="name-date-wrapper">
+    <h2 class="date"></h2>
     <h1 class="welcome-message">Welcome<span class="username"></span></h1>
   </div>
-  </section>
+</header>
   <div class="grid">
     <div class="grid-column1">
       <section class="data-section hydration grid-item draggable" tabindex="1">
         <h2 class="data-heading">Hydration</h2>
-        <article class="data-article water-consumed-article">
+        <section class="data-subsection">
           <img class="img-medium" src="../images/drop.svg" alt="water droplet">
           <h3 class="subtext">TODAY</h3>
           <p class="data-text water-consumed"></p>
-        </article>
-        <article class="data-article water-consumed-week">
+        </section>
+        <section class="data-subsection water-consumed-week">
           <canvas id="water-consumed-week"
             alt="A bar chart that displays the number of ounces of water the user consumed daily, over the course of a week."></canvas>
-        </article>
+        </section>
       </section>
       <section class="data-section challenges grid-item draggable" tabindex="5">
         <h2 class="data-heading">Challenges</h2>
-        <article class="increasing-steps-article">
+        <section>
           <h3 class="streak-heading">3 Day Step Streak</h3>
           <p class="increasing-steps"></p>
-        </article>
-        <article class="increasing-stairs-article">
+        </section>
+        <section>
           <h3 class="streak-heading">2 Day Stair Streak</h3>
           <p class="increasing-stairs"></p>
-        </article>
+        </section>
       </section>
       <section class="data-section friends grid-item draggable" tabindex="4">
         <h2 class="data-heading">Friends</h2>
-        <article class="friends-step"></article>
+        <section class="friends-step"></section>
       </section>
     </div>
     <div class="grid-column2">
       <section class="data-section sleep grid-item draggable" tabindex="2">
         <h2 class="data-heading">Sleep</h2>
-        <article class="data-article hours-slept-day-article">
+        <section class="data-subsection">
           <img class="img-medium" src="../images/moon.svg" alt="moon with stars">
           <h3 class="subtext">LAST NIGHT</h3>
           <p class="data-text hours-slept-day"></p>
           <p class="data-text quality-sleep-day"></p>
-        </article>
-        <article class="data-article sleep-week">
+        </section>
+        <section class="data-subsection sleep-week">
           <canvas id="sleep-week"
             alt="A line chart that displays the number of hours slept each day of the week and the quality of sleep each night."></canvas>
-        </article>
-        <article class="data-article longest-sleepers-article">
+        </section>
+        <section class="data-subsection">
           <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
           <h3 class="subtext secondary-heading">USER WITH MOST SLEEP THIS WEEK</h3>
           <p class="data-text longest-sleepers"></p>
-        </article>
+        </section>
       </section>
     </div>
     <div class="grid-column3">
       <section class="data-section activity grid-item draggable" tabindex="3">
         <h2 class="data-heading">Activity</h2>
-        <article class="data-article user-step-goal"></article>
-        <article class="data-article average-step-goal"></article>
-        <article class="data-article number-of-steps-day-article">
+        <section class="data-subsection user-step-goal"></section>
+        <section class="data-subsection average-step-goal"></section>
+        <section class="data-subsection">
           <p class="number-of-steps-day"></p>
-        </article>
-        <article class="data-article number-of-minutes-active-day-article">
+        </section>
+        <section class="data-subsection">
           <img class="img-medium" src="../images/stopwatch.svg" alt="road">
           <h3 class="subtext">TODAY</h3>
           <div class="separator">
@@ -91,8 +89,8 @@
               <label class="activity-labels">Min. Active</label>
             </div>
           </div>
-        </article>
-        <article class="data-article distance-comparison">
+        </section>
+        <section class="data-subsection distance-comparison">
           <img class="img-medium" src="../images/footsteps-silhouette-variant.svg" alt="road">
           <h3 class="subtext">TODAY</h3>
           <div class="separator">
@@ -110,8 +108,8 @@
               <h3 class="subtext avg-number-of-steps-goal"></h3>
             </div>
           </div>
-        </article>
-        <article class="data-article stairs-comparison">
+        </section>
+        <section class="data-subsection stairs-comparison">
           <img class="img-medium" src="../images/goal.svg" alt="road">
           <h3 class="subtext">TODAY</h3>
           <div class="separator">
@@ -127,25 +125,25 @@
               <label class="activity-labels">Stairs Climbed</label>
             </div>
           </div>
-        </article>
-        <article class="data-article distance-in-miles-article">
+        </section>
+        <section class="data-subsection">
           <img class="img-medium" src="../images/road.svg" alt="road">
           <h3 class="subtext">TODAY</h3>
           <p class="data-text distance-in-miles"></p>
-        </article>
-        <article class="data-article week-review-article">
+        </section>
+        <section class="data-subsection">
           <img class="img-medium" src="../images/appointment.svg"
             alt="Calendar to signify a week of exercise completed.">
           <h3 class="subtext secondary-heading">YOUR WEEK IN REVIEW</h3>
           <p class="data-text week-review-minutes"></p>
           <p class="data-text week-review-steps"></p>
           <p class="data-text week-review-stairs"></p>
-        </article>
-        <article class="data-article most-active-article">
+        </section>
+        <section class="data-subsection">
           <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
           <h3 class="subtext secondary-heading">USER MOST ACTIVE THIS WEEK</h3>
           <p class="data-text most-active"></p>
-        </article>
+        </section>
       </section>
     </div>
   </div>
