Add JS for fetchpost

--- a/src/index.html
+++ b/src/index.html
@@ -78,33 +78,33 @@
           <form class="sleep-form" action="index.html" method="post">
             <div class="input-container">
               <label for="">Hours Slept</label>
-              <input class="input-hoursSlept" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+              <input class="hours-slept" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
             </div>
             <div class="input-container">
               <label for="">Sleep Quality</label>
-              <input class="input-sleepQuality" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+              <input class="sleep-quality" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
             </div>
             <button class="sleep__submit--btn" type="submit">Submit Data</button>
           </form>
           <form class="hydration-form" action="index.html" method="post">
             <div class="input-container">
               <label for="">Ounces Drank</label>
-              <input class="input-numOunces" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+              <input class="num-ounces" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
             </div>
             <button class="hydration__submit--btn" type="submit">Submit Data</button>
           </form>
           <form class="activity-form" action="index.html" method="post">
             <div class="input-container">
               <label for="">Number of Steps</label>
-              <input type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+              <input class="num-steps" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
             </div>
             <div class="input-container">
               <label for="">Minutes Active</label>
-              <input type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+              <input class="minutes-active" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
             </div>
             <div class="input-container">
               <label for="">Flights of Stairs</label>
-              <input type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
+              <input class="flights-stairs" type="number" step="any" min="0" name="" value="" placeholder="Enter Numerical Data" required>
             </div>
             <button class="activity__submit--btn" type="submit">Submit Data</button>
           </form>
