Style page for laptop screens

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <section class="welcome-section">
-      <img src="./images/logo.png" class="fitlit-logo" alt="FitLit logo">
+      <h1 class="fitlit-logo">FitLit</h1>
       <div class="name-date-wrapper">
       <h2 class="date"></h2>
-    <h1 class="welcome-message">Welcome<span class="username"></span></h1>
+    <h2 class="welcome-message">Welcome<span class="username italic-name"></span></h2>
   </div>
   </section>
   <div class="grid">
