Correct merge conflicts that were not resolved last commit

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/0.7.0/dist/progressbar.js"></script>
   </head>
   <body>
-    <header class="welcome-section
+    <header class="welcome-section">
       <h1 class="fitlit-logo">FitLit</h1>
       <div class="name-date-wrapper">
       <h2 class="date"></h2>
