Clean CSS and sassify new styling

--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,9 @@
       <section class="data-section post-section grid-item draggable" tabindex="2">
         <h2 class="data-heading">Submit Stats</h2>
         <div class="post__btn--container">
-          <button class="show__hydration--btn" type="button" name="button">Post Hydration Data</button>
-          <button class="show__activity--btn" type="button" name="button">Post Activity Data</button>
-          <button class="show__sleep--btn" type="button" name="button">Post Sleep Data</button>
+          <button class="show__hydration--btn" type="button" name="button">Post Hydration Stats</button>
+          <button class="show__activity--btn" type="button" name="button">Post Activity Stats</button>
+          <button class="show__sleep--btn" type="button" name="button">Post Sleep Stats</button>
         </div>
         <article class="data-article post-article">
           <h3 class="subtext">Input your stats</h3>
