Match label for attributes to accompanying inputs

--- a/src/index.html
+++ b/src/index.html
@@ -75,34 +75,34 @@
             <h3 class="subtext">Input your stats</h3>
             <form class="sleep-form" action="index.html" method="post">
               <div class="input-container">
-                <label for="">Hours Slept</label>
-                <input class="hours-slept" type="number" step="any" min="0" name="hours-slept" value="" placeholder="Enter Numerical Data" required>
+                <label for="hours-slept">Hours Slept</label>
+                <input class="hours-slept" type="number" step="any" min="0" name="hours-slept" placeholder="Enter Numerical Data" required>
               </div>
               <div class="input-container">
-                <label for="">Sleep Quality</label>
-                <input class="sleep-quality" type="number" step="any" min="0" name="sleep-quality" value="" placeholder="Enter Numerical Data" required>
+                <label for="sleep-quality">Sleep Quality</label>
+                <input class="sleep-quality" type="number" step="any" min="0" name="sleep-quality" placeholder="Enter Numerical Data" required>
               </div>
               <button class="sleep__submit--btn" type="submit">Submit Data</button>
             </form>
             <form class="hydration-form" action="index.html" method="post">
               <div class="input-container">
-                <label for="">Ounces Drank</label>
-                <input class="num-ounces" type="number" step="any" min="0" name="num-ounces" value="" placeholder="Enter Numerical Data" required>
+                <label for="num-ounces">Ounces Drank</label>
+                <input class="num-ounces" type="number" step="any" min="0" name="num-ounces" placeholder="Enter Numerical Data" required>
               </div>
               <button class="hydration__submit--btn" type="submit">Submit Data</button>
             </form>
             <form class="activity-form" action="index.html" method="post">
               <div class="input-container">
-                <label for="">Number of Steps</label>
-                <input class="num-steps" type="number" step="any" min="0" name="num-steps" value="" placeholder="Enter Numerical Data" required>
+                <label for="num-steps">Number of Steps</label>
+                <input class="num-steps" type="number" step="any" min="0" name="num-steps" placeholder="Enter Numerical Data" required>
               </div>
               <div class="input-container">
-                <label for="">Minutes Active</label>
-                <input class="minutes-active" type="number" step="any" min="0" name="minutes-active" value="" placeholder="Enter Numerical Data" required>
+                <label for="minutes-active">Minutes Active</label>
+                <input class="minutes-active" type="number" step="any" min="0" name="minutes-active" placeholder="Enter Numerical Data" required>
               </div>
               <div class="input-container">
-                <label for="">Flights of Stairs</label>
-                <input class="flights-stairs" type="number" step="any" min="0" name="flights-stairs" value="" placeholder="Enter Numerical Data" required>
+                <label for="flights-stairs">Flights of Stairs</label>
+                <input class="flights-stairs" type="number" step="any" min="0" name="flights-stairs" placeholder="Enter Numerical Data" required>
               </div>
               <button class="activity__submit--btn" type="submit">Submit Data</button>
             </form>
