--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
             <p class="data-text longest-sleeper"></p>
           </section>
         </section>
-        <section class="data-section post-section grid-item draggable" tabindex="2">
+        <section class="data-section post-section grid-item draggable" tabindex="0">
           <h2 class="data-heading">Submit Stats</h2>
           <div class="post__btn--container">
             <button class="show__hydration--btn" type="button" name="button">Post Hydration Stats</button>
@@ -185,7 +185,7 @@
           </section>
           <section class="data-subsection">
             <img class="img-medium" src="../images/trophy.svg" alt="trophy for a winner">
-            <h3 class="subtext secondary-heading">USER MOST ACTIVE THIS WEEK</h3>
+            <h3 class="subtext secondary-heading">MOST ACTIVE USER</h3>
             <p class="data-text most-active"></p>
           </section>
         </section>
